Added Swagger Annotation for User Tag
