# src/E-Commerce/docs/swagger.yaml
@@ -1,11 +1,183 @@
 basePath: /
 definitions:
+  address.Address:
+    properties:
+      addressId:
+        type: string
+      addressLine1:
+        type: string
+      addressLine2:
+        type: string
+      addressType:
+        type: string
+      city:
+        type: string
+      country:
+        type: string
+      isPreferred:
+        type: boolean
+      mobile1:
+        type: string
+      mobile2:
+        type: string
+      state:
+        type: string
+      userId:
+        type: string
+      zip:
+        type: string
+    type: object
+  cart_item.CartItem:
+    properties:
+      cart_item_id:
+        type: string
+      created_at:
+        type: string
+      modified_at:
+        type: string
+      product:
+        $ref: '#/definitions/products.Product'
+      product_id:
+        type: string
+      quantity:
+        type: integer
+      user_id:
+        type: string
+    type: object
+  products.Product:
+    properties:
+      category_id:
+        description: "2"
+        type: string
+      description:
+        description: "8"
+        type: string
+      dimension:
+        description: "3"
+        type: string
+      last_Updated:
+        description: "15"
+        type: string
+      manufacturer_id:
+        description: "4"
+        type: string
+      name:
+        description: "5"
+        type: string
+      picture:
+        description: "6"
+        type: string
+      price:
+        description: "7"
+        type: number
+      product_id:
+        description: "1"
+        type: string
+      seller_id:
+        description: "9"
+        type: string
+      seller_name:
+        description: "10"
+        type: string
+      sku:
+        description: "11"
+        type: string
+      sub_category_id:
+        description: "12"
+        type: string
+      subscribable:
+        description: "16"
+        type: boolean
+      units:
+        description: "14"
+        type: integer
+      weight:
+        description: "13"
+        type: number
+    type: object
+  subscriptions.Subscription:
+    properties:
+      createdAt:
+        type: string
+      endDate:
+        type: string
+      friday:
+        type: boolean
+      monday:
+        type: boolean
+      order_id:
+        description: This is OrderItemId
+        type: string
+      pauseDates:
+        items:
+          type: string
+        type: array
+      product:
+        $ref: '#/definitions/products.Product'
+      product_id:
+        type: string
+      saturday:
+        type: boolean
+      startDate:
+        type: string
+      subscription_id:
+        type: string
+      sunday:
+        type: boolean
+      thursday:
+        type: boolean
+      tuesday:
+        type: boolean
+      user_id:
+        type: string
+      wednesday:
+        type: boolean
+    type: object
+  user.User:
+    properties:
+      created_at:
+        type: string
+      email:
+        type: string
+      first_name:
+        type: string
+      last_name:
+        type: string
+      login_mode:
+        type: string
+      mobile:
+        type: string
+      password:
+        type: string
+      user_id:
+        type: string
+    type: object
   userData.CreateUserIdInput:
     properties:
       userId:
         type: string
     required:
     - userId
+    type: object
+  userData.CreateWishlistInput:
+    properties:
+      productId:
+        type: string
+      quantity:
+        type: integer
+      userId:
+        type: string
+    required:
+    - productId
+    - quantity
+    - userId
+    type: object
+  userData.StatusMsg:
+    properties:
+      msg:
+        type: string
+      status:
+        type: boolean
     type: object
   wishlist.Wishlist:
     properties:
@@ -20,7 +192,7 @@ definitions:
       wishlist_id:
         type: string
     type: object
-host: 192.168.13.5:8080
+host: 192.168.13.119:8080
 info:
   contact:
     email: support@swagger.io
@@ -34,13 +206,152 @@ info:
   title: APIs of E-Commerce Project
   version: "1.0"
 paths:
-  /get_wishlist:
+  /address:
+    post:
+      consumes:
+      - application/json
+      description: To get address list.
+      parameters:
+      - description: It takes UserId
+        in: body
+        name: json
+        required: true
+        schema:
+          $ref: '#/definitions/userData.CreateUserIdInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/address.Address'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get all addresses of the User.
+      tags:
+      - User
+  /c_wishlist:
+    post:
+      consumes:
+      - application/json
+      description: To create wishlist of the User
+      parameters:
+      - description: It takes UserId, ProductId, Quantity
+        in: body
+        name: json
+        required: true
+        schema:
+          $ref: '#/definitions/userData.CreateWishlistInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/userData.StatusMsg'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Creates wishlist for selected product.
+      tags:
+      - User
+  /cart_item:
+    post:
+      consumes:
+      - application/json
+      description: To get cart list.
+      parameters:
+      - description: It takes UserId
+        in: body
+        name: json
+        required: true
+        schema:
+          $ref: '#/definitions/userData.CreateUserIdInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/cart_item.CartItem'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get all cart products of the User.
+      tags:
+      - User
+  /d_wishlist:
+    delete:
+      consumes:
+      - application/json
+      description: To delete the selected product from User's Wishlist.
+      parameters:
+      - description: wishlist_id value
+        in: query
+        name: wishlistId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/userData.StatusMsg'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Deletes the selected wishlistId from the Wishlist Table.
+      tags:
+      - User
+  /r_wishlist:
     post:
       consumes:
       - application/json
       description: Get the all wishlist of the User.
       parameters:
-      - description: Request Body to get all Wishlist
+      - description: It takes UserId
         in: body
         name: json
         required: true
@@ -70,17 +381,18 @@ paths:
       summary: Shows the all wishlist of the User.
       tags:
       - User
-  /wishlist:
-    delete:
+  /subscription:
+    post:
       consumes:
       - application/json
-      description: To delete the selected product from User's Wishlist.
+      description: To get subscription list.
       parameters:
-      - description: Query string, wishlist_id value
-        in: query
-        name: wishlistId
+      - description: It takes UserId
+        in: body
+        name: json
         required: true
-        type: string
+        schema:
+          $ref: '#/definitions/userData.CreateUserIdInput'
       produces:
       - application/json
       responses:
@@ -88,7 +400,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/wishlist.Wishlist'
+              $ref: '#/definitions/subscriptions.Subscription'
             type: array
         "400":
           description: Bad Request
@@ -102,7 +414,41 @@ paths:
           description: Internal Server Error
           schema:
             type: string
-      summary: Deletes the selected wishlistId from the Wishlist Table.
+      summary: Get all subscribed products of the User.
+      tags:
+      - User
+  /user:
+    post:
+      consumes:
+      - application/json
+      description: To get User's information.
+      parameters:
+      - description: It takes UserId
+        in: body
+        name: json
+        required: true
+        schema:
+          $ref: '#/definitions/userData.CreateUserIdInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/user.User'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get User's information.
       tags:
       - User
 schemes:
