# src/E-Commerce/main.go
@@ -13,6 +13,7 @@ import (
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 	"os"
+	//httpSwagger "github.com/swaggo/http-swagger"
 )
 
 // @title APIs of E-Commerce Project
@@ -27,7 +28,7 @@ import (
 // @license.name Apache 2.0
 // @license.url http://www.apache.org/licenses/LICENSE-2.0.html
 
-// @host 192.168.13.5:8080
+// @host 192.168.13.119:8080
 // @BasePath /
 // @schemes http
 func main() {
@@ -43,7 +44,9 @@ func main() {
 
 	route := gin.Default()
 	route.Use(CORSMiddleware())
-	//route.Use(cors.Default())
+
+	// Swagger UI http://192.168.13.119:8080/swagger/index.html
+	route.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	route.GET(ec_constant.ROUTE_HOME, response.Home)
 	route.GET(ec_constant.ROUTE_EXPLORE, response.ExploreTopCategory)
@@ -51,12 +54,6 @@ func main() {
 	route.GET(ec_constant.ROUTE_PROFILE, userdata.Profile)
 	route.GET(ec_constant.ROUTE_SUBSCRIPTION, response.Subscription)
 	route.GET(ec_constant.ROUTE_ONBOARDING, response.OnBoarding)
-
-	// use ginSwagger middleware to serve the API docs
-	//url := ginSwagger.URL(ec_constant.IpAddress + "/swagger/doc.json") // The url pointing to API definition
-	//url := ginSwagger.URL(ec_constant.IpAddress + "/docs/doc.json") // The url pointing to API definition
-	//route.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, url))
-	route.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	// Bakery Items
 	route.Static(ec_constant.BakeryItemsRelativePath4x, ec_constant.BakeryItemsFolderPath4x)
@@ -89,9 +86,9 @@ func main() {
 	route.POST("/address", userData.GetUserAddress)
 	route.POST("/cart_item", userData.GetUserCartItem)
 	route.POST("/subscription", userData.GetUserAllSubscription)
-	route.POST("/wishlist", userData.CreateWishlist)
-	route.POST("/get_wishlist", userData.GetWishlist)
-	route.DELETE("/wishlist", userData.DeleteWishlist)
+	route.POST("/c_wishlist", userData.CreateWishlist)
+	route.POST("/r_wishlist", userData.GetWishlist)
+	route.DELETE("/d_wishlist", userData.DeleteWishlist)
 
 	err := route.Run(ec_constant.IpAddress)
 	if err != nil {
